<resources>
    <string name="app_name">Villager Viewer ♡</string>
    <string name="villagerType">Villager Type: </string>
    <string name="species">Species: </string>
    <string name="birthday">Birthday: </string>
    <string name="skill">Skill: </string>
    <string name="goal">Goal: </string>
    <string name="favoriteSong">Favorite Song: </string>
    <string name="catchphrase"> Catchphrase: </string>
    <string name="add">Favorite</string>
    <string name="favoriteList">Favorites</string>
</resources>